# whisper-key

./: README.md  pyproject.toml
whisperkey/: file_handler.py  keyboard_handler.py  main.py  tray_icon.py
